--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.5",
     "@typescript-eslint/parser": "^4.28.4",
-    "@web3-react/core": "^6.1.9",
-    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/core": "^8.0.35-beta.0",
+    "@web3-react/metamask": "^8.0.28-beta.0",
+    "@web3-react/walletconnect": "^8.0.36-beta.0",
     "axios": "^0.24.0",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.5.1",
@@ -36,6 +37,7 @@
     "react-modal": "^3.13.1",
     "react-number-format": "^4.8.0",
     "react-placeholder-loading": "^0.5.30",
+    "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-rnd": "^10.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
