--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-react-app": "^6.0.0"
+    "eslint-config-react-app": "^6.0.0",
+    "siwe": "^1.1.6"
   }
 }
