--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@tanstack/react-query": "^4.24.6",
     "eslint-config-react-app": "^6.0.0",
     "react-spinners": "^0.13.8",
     "siwe": "^1.1.6"
