--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@tanstack/react-query": "^4.24.6",
     "eslint-config-react-app": "^6.0.0",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.4.3",
     "siwe": "^1.1.6"
   }
 }
