--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,19 @@
 {
-  "short_name": "Treact",
-  "name": "Treact - Modern React Templates and Components for building Landing Pages",
+  "short_name": "Decentrifi",
+  "name": "Decentrifi",
+  "iconPath": "favicon.png",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "favicon.png",
+      "sizes": "64x64 32x32 24x24 16x16"
     },
     {
-      "src": "logo192.png",
+      "src": "favicon.png",
       "type": "image/png",
       "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
+  "description": "Open Source Decentralized Finance Aggegator",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
