--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
-  "name": "@defitrack/showcase",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@decentrifi/showcase",
+  "version": "0.2.0",
   "dependencies": {
     "@decentri.fi/defi-hub": "^2.0.4",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
-    "@ethersproject/address": "^5.4.0",
-    "@ethersproject/bignumber": "^5.4.2",
-    "@ethersproject/constants": "^5.4.0",
-    "@ethersproject/contracts": "^5.4.1",
-    "@ethersproject/providers": "^5.4.3",
+    "@ethersproject/address": "^5.7.0",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/constants": "^5.7.0",
+    "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@mui/material": "^5.2.0",
     "@mui/styled-engine-sc": "^5.1.0",
     "@owaiswiz/use-in-view": "^1.0.16",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^13.1.5",
     "@typescript-eslint/parser": "^4.28.4",
-    "@web3-react/core": "^8.0.35-beta.0",
-    "@web3-react/metamask": "^8.0.28-beta.0",
-    "@web3-react/walletconnect": "^8.0.36-beta.0",
-    "axios": "^0.24.0",
+    "@web3-react/core": "^8.2.0",
+    "@web3-react/metamask": "^8.2.1",
+    "@web3-react/walletconnect": "^8.2.0",
+    "axios": "^1.4.0",
     "ethereum-blockies-base64": "^1.0.2",
-    "ethers": "^5.5.1",
     "feather-icons": "^4.28.0",
     "framer-motion": "^4.1.5",
     "react": "^17.0.2",
