--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@decentrifi/showcase",
-  "version": "0.2.0",
+  "name": "@decentrifi/landing",
+  "version": "1.0.0",
   "dependencies": {
     "@decentri.fi/defi-hub": "^2.0.4",
     "@emotion/react": "^11.6.0",
