--- a/package.json
+++ b/package.json
@@ -5,22 +5,13 @@
     "@decentri.fi/defi-hub": "^2.1.1",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
-    "@ethersproject/address": "^5.7.0",
-    "@ethersproject/bignumber": "^5.7.0",
-    "@ethersproject/constants": "^5.7.0",
-    "@ethersproject/contracts": "^5.7.0",
-    "@ethersproject/providers": "^5.7.2",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@mui/material": "^5.2.0",
     "@mui/styled-engine-sc": "^5.1.0",
     "@owaiswiz/use-in-view": "^1.0.16",
     "@typescript-eslint/parser": "^4.28.4",
-    "@web3-react/core": "^8.2.0",
-    "@web3-react/metamask": "^8.2.1",
-    "@web3-react/walletconnect": "^8.2.0",
     "axios": "^1.4.0",
-    "ethereum-blockies-base64": "^1.0.2",
     "feather-icons": "^4.28.0",
     "framer-motion": "^4.1.5",
     "react": "^17.0.2",
@@ -35,7 +26,7 @@
     "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-rnd": "^10.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-slick": "^0.28.1",
     "react-toastify": "^8.1.0",
     "reactjs-popup": "^2.0.5",
@@ -43,8 +34,7 @@
     "styled-components": "^5.2.3",
     "sweetalert": "^2.1.2",
     "tailwindcss": "^2.1.1",
-    "twin.macro": "^2.8.1",
-    "web3": "^1.5.0"
+    "twin.macro": "^2.8.1"
   },
   "scripts": {
     "start": "npx react-scripts start",
@@ -78,6 +68,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@ensdomains/ens-avatar": "^0.2.1",
     "@tanstack/react-query": "^4.24.6",
     "eslint-config-react-app": "^6.0.0",
