--- a/package.json
+++ b/package.json
@@ -2,32 +2,30 @@
   "name": "@decentrifi/landing",
   "version": "1.0.0",
   "dependencies": {
-    "@decentri.fi/defi-hub": "^2.1.1",
+    "@decentri.fi/defi-hub": "^2.1.4",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
-    "@mui/material": "^5.2.0",
-    "@mui/styled-engine-sc": "^5.1.0",
+    "@mui/material": "^5.14.7",
+    "@mui/styled-engine-sc": "^5.14.7",
     "@owaiswiz/use-in-view": "^1.0.16",
     "@typescript-eslint/parser": "^4.28.4",
     "axios": "^1.4.0",
     "feather-icons": "^4.28.0",
     "framer-motion": "^4.1.5",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
+    "@tanstack/react-query": "^4.24.6",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
+    "react-dom": "^18.2.0",
     "react-ga4": "^1.4.1",
     "react-github-btn": "^1.2.0",
-    "react-modal": "^3.13.1",
-    "react-number-format": "^4.8.0",
+    "react-modal": "^3.16.1",
+    "react-number-format": "^5.3.1",
     "react-placeholder-loading": "^0.5.30",
     "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-rnd": "^10.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.28.1",
     "react-toastify": "^8.1.0",
     "reactjs-popup": "^2.0.5",
     "slick-carousel": "^1.8.1",
@@ -37,22 +35,8 @@
     "twin.macro": "^2.8.1"
   },
   "scripts": {
-    "start": "npx react-scripts start",
-    "build": "npx react-scripts build",
-    "test": "npx react-scripts test"
-  },
-  "eslintConfig": {
-    "extends": "react-app",
-    "overrides": [
-      {
-        "files": [
-          "src/**/*.js"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ]
+    "start": "npx vite",
+    "build": "npx vite build"
   },
   "browserslist": {
     "production": [
@@ -70,9 +54,13 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@ensdomains/ens-avatar": "^0.2.1",
-    "eslint-config-react-app": "^6.0.0",
     "react-spinners": "^0.13.8",
     "recharts": "^2.4.3",
-    "siwe": "^1.1.6"
+    "siwe": "^1.1.6",
+    "@vitejs/plugin-react": "^4.1.1",
+    "vite": "^4.5.0",
+    "vite-plugin-babel-macros": "^1.0.6",
+    "vite-plugin-svgr": "^4.1.0",
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
