--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@mui/material": "^5.14.7",
     "@mui/styled-engine-sc": "^5.14.7",
     "@owaiswiz/use-in-view": "^1.0.16",
+    "@tanstack/react-query": "^4.24.6",
     "@typescript-eslint/parser": "^4.28.4",
     "axios": "^1.4.0",
     "feather-icons": "^4.28.0",
     "framer-motion": "^4.1.5",
     "react": "^18.2.0",
-    "@tanstack/react-query": "^4.24.6",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-ga4": "^1.4.1",
@@ -28,6 +28,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^8.1.0",
     "reactjs-popup": "^2.0.5",
+    "rsuite": "^5.55.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.3",
     "sweetalert": "^2.1.2",
@@ -54,10 +55,10 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@ensdomains/ens-avatar": "^0.2.1",
+    "@vitejs/plugin-react": "^4.1.1",
     "react-spinners": "^0.13.8",
     "recharts": "^2.4.3",
     "siwe": "^1.1.6",
-    "@vitejs/plugin-react": "^4.1.1",
     "vite": "^4.5.0",
     "vite-plugin-babel-macros": "^1.0.6",
     "vite-plugin-svgr": "^4.1.0",
